# aspire-samples

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
samples/Metrics/MetricsApp/: Program.cs  (+1 more)
samples/Metrics/MetricsApp.AppHost/: MetricsApp.AppHost.csproj
samples/aspire-with-azure-functions/: Directory.Packages.props
samples/aspire-with-python/: apphost.cs
samples/aspire-with-python/app/: pyproject.toml
samples/container-build/: apphost.cs
samples/golang-api/: .editorconfig  README.md  apphost.ts  aspire.config.json  package-lock.json
samples/image-gallery/: README.md  apphost.cs  apphost.run.json
samples/node-express-redis/: README.md  apphost.ts  aspire.config.json
samples/polyglot-task-queue/: README.md  apphost.ts  aspire.config.json  package-lock.json
samples/polyglot-task-queue/worker-python/: main.py  pyproject.toml
samples/python-fastapi-postgres/: README.md  apphost.ts  aspire.config.json
samples/python-openai-agent/: README.md  apphost.ts  aspire.config.json
samples/python-script/: README.md  apphost.ts  aspire.config.json
samples/rag-document-qa-svelte/: README.md  apphost.ts  aspire.config.json  package.json
samples/rag-document-qa-svelte/api/: main.py  pyproject.toml  qdrant_setup.py
samples/vite-csharp-postgres/: .editorconfig  README.md  apphost.ts  aspire.config.json
samples/vite-react-fastapi/: README.md  apphost.ts  aspire.config.json  package-lock.json
samples/vite-yarp-static/: README.md  apphost.ts  aspire.config.json
tests/SamplesIntegrationTests/: SamplesIntegrationTests.csproj
(+131 files in other folders)
