[project]
name = "FastAPI-starter"
version = "0.1.0"
description = "FastAPI starter"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "opentelemetry-distro>=0.62b1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-redis>=0.62b1",
    "redis>=7.4.0",
]