[project]
name = "rag-api"
version = "0.1.0"
description = "RAG Document Q&A API with Qdrant and OpenAI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "openai>=2.36.0",
    "qdrant-client>=1.18.0",
    "python-multipart>=0.0.28",
    "tiktoken>=0.12.0"
]
